<resources>
    <string name="app_name">Easycom</string>
    <!--Bottom menu-->
    <string name="bmenu_fav">Favoritos</string>
    <string name="bmenu_hist">Historial</string>
    <string name="bmenu_scan">Escanear</string>
    <string name="bmenu_noti">Alertas</string>
    <string name="bmenu_user">Usuario</string>
    <!--Mensaje scanner-->
    <string name="msg_scn">Escanea el codigo de barras o el QR</string>
    <string name="msg_scn_error">El escaner ha fallado</string>
    <!--Interfaz-->
    <string name="boton_buscar">Buscar</string>
    <string name="texto_codigo">Codigo: </string>
    <string name="texto_url">Url: </string>
    <string name="texto_nombre">Nombre: </string>
    <string name="texto_precio">Precio: </string>
    <string name="texto_fecha">Fecha de registro: </string>
    <string name="texto_email">Email: </string>
    <string name="texto_especificaciones">Especificaciones: </string>
    <string name="texto_descripcion">Descripcion: </string>
    <string name="username_hint">Usuario: </string>
    <string name="password_hint">Contraseña: </string>
    <string name="email_hint">Email: </string>
    <string name="repassword_hint">Repetir contraseña: </string>
    <string name="texto_login">LOGIN</string>
    <string name="texto_logout">LOGOUT</string>
    <string name="texto_registrar">REGISTRAR</string>
    <string name="texto_anonimo">ANONIMO</string>
    <string name="texto_msg_scanner">Empieza a ahorrar comparando el precio de los productos en las siguientes tiendas: </string>
    <!--Toast-->
    <string name="toast_registrado">"Usuario registrado"</string>
    <string name="toast_error_contraseñas">"Error: Las contraseñas no coinciden"</string>
    <string name="toast_error_email">"Error: Introduce un email válido"</string>
    <string name="toast_error_campos">"Error: Rellena todos los campos"</string>
    <string name="toast_error_registrado">"Error: Ese email ya ha sido registrado"</string>
    <string name="toast_error_username">"Error: El nombre de usuario solo puede contener letras y numeros"</string>
    <string name="toast_error_contraseña">"Error: La contraseña es demasiado corta"</string>
    <string name="toast_error_registro">"Error: Se ha cometido un error de conexion"</string>
    <string name="toast_error_producto">"Error: No se ha podido encontrar el producto"</string>
    <string name="toast_error_historial">"Error: No se ha podido cargar el historial"</string>
    <string name="toast_vacio_historial">"El historial está vacío"</string>
    <string name="toast_error_sql">"Error: Caracteres no válidos"</string>
    <string name="toast_exito_registro">"Usuario creado con exito"</string>
    <string name="toast_exito_login">"Se ha iniciado sesión"</string>
    <string name="toast_exito_logout">"Se ha cerrado sesión"</string>
    <string name="toast_fallo_login">"Usuario o contraseña erroneos"</string>
    <string name="toast_error_favoritos">"No se ha podido añadir/eliminar el elemento a/de favoritos"</string>
</resources>