<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_scaner"
        android:icon="@drawable/ic_round_qr_code_scanner_24"
        android:title="@string/bmenu_scan" />

    <item android:id="@+id/nav_historial"
        android:title="@string/bmenu_hist"
        android:icon="@drawable/ic_round_list_alt_24"/>

    <item
        android:id="@+id/nav_favoritos"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/bmenu_fav" />
    <item android:id="@+id/nav_notificaciones"
        android:title="@string/bmenu_noti"
        android:icon="@drawable/ic_round_notifications_24"/>

    <item
        android:id="@+id/nav_usuario"
        android:icon="@drawable/ic_round_person_24"
        android:title="@string/bmenu_user" />
</menu>